consolidate page-header styles into new partial

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -35,6 +35,8 @@
 
 @import "partials/layout";
 
+@import "partials/page-header";
+
 /*------------------------------------*\
     $GLOBAL OBJECTS
 \*------------------------------------*/
