add a placeholder selector for extending btn-alt style

--- a/app/assets/stylesheets/partials/_buttons.scss
+++ b/app/assets/stylesheets/partials/_buttons.scss
@@ -36,6 +36,7 @@
   }
 }
 
+%btn-alt,
 .btn-alt {
   background-color: $color-salient-light;
   box-shadow: .08em .08em darken($color-salient-light, 10%);
