--- a/app/assets/stylesheets/partials/_sub-navigation.scss
+++ b/app/assets/stylesheets/partials/_sub-navigation.scss
@@ -65,6 +65,14 @@
       display: inline-block;
       text-decoration: none;
     }
+
+    &:last-child {
+      display: none;
+
+      @include breakpoint($bp-m) {
+        display: inline;
+      }
+    }
   }
 }
 
