move detail report message out page page-header

--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -21,6 +21,8 @@
       </nav>
     </header>
 
+    <%= render 'incidents/detail-report-link' %>
+
     <section class="incident-show-body">
       <dl class="incident-data-list">
         <dt class="incident-field-label incident-type">Type</dt>
