--- a/app/views/incidents/_detail-report-link.html.erb
+++ b/app/views/incidents/_detail-report-link.html.erb
@@ -1,7 +1,10 @@
-<% if @incident.detailed_report.path %>
-  <a class="btn btn-alt incident-detailreport-link" href="<%= @incident.detailed_report.url %>" title="Download the Incident Detail Report for this incident to find more information">See Incident Detail Report [PDF]</a>
-<% elsif !@incident.foi_requests.empty? %>
+<% if !@incident.foi_requests.empty? %>
+  <p class="notice <%= foi_request_state_class(@incident) %>">
   <%= link_to_right_to_know(@incident) %>
-<% else %>
-  <%= link_to "Adopt", incident_adopt_path(@incident), class: "btn btn-alt incident-detailreport-link", title: "help get more information about this incident" %>
+  </p>
+<% end %>
+<% if @incident.detailed_report.path %>
+  <p class="notice incident-report-download">
+  <%= link_to "See Incident Detail Report [PDF]", @incident.detailed_report.url, class: "incident-report-download-link", title: "Download the Incident Detail Report for this incident to find more information" %>
+  </p>
 <% end %>
