--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -20,6 +20,7 @@
 @import "partials/typebase";
 @import "partials/forms";
 @import "partials/messages";
+@import "partials/foi-notices";
 @import "partials/abbreviations";
 @import "partials/lists";
 @import "partials/logo";
