--- a/app/views/incidents/about.html.erb
+++ b/app/views/incidents/about.html.erb
@@ -36,7 +36,7 @@
 
   <p><%= link_to "Explore the incident reports", incidents_path, title: 'Explore official reports of events in immigration detention, recorded by detention centre staff.'%>.</p>
 
-  <p><a href="https://s3.amazonaws.com/detention_logs/Dataset+for+incident+database.csv">Download the available incidents reports in spreadsheet format.</a></p>
+  <p><a href="https://s3-ap-southeast-2.amazonaws.com/detentionlogs/detentionlogs_incident_data_1009-0511.csv">Download the available incidents reports in spreadsheet format.</a></p>
 </aside>
 
 
