Add new investigation

--- a/app/views/pages/investigations.html.erb
+++ b/app/views/pages/investigations.html.erb
@@ -12,6 +12,12 @@
 
 <p class="lede">Read our <%= link_to 'Reporting Recipe', :investigations_recipe, title: 'An introduction to using Detention Logs in reporting or research.' %> to find out how to approach this resource for your own investigation or research.</p>
 
+<h2 id="newresearchhighlightsprevalenceofhangingincidentsinimmigrationdetention"><a href="https://newmatilda.com/2016/02/18/new-research-highlights-prevalence-of-hanging-incidents-in-immigration-detention/">New Research Highlights Prevalence Of Hanging Incidents In Immigration Detention</a></h2>
+
+<p>by Max Chalmers</p>
+
+<p><em>February 18, 2016</em> - New analysis by Kyli Hedrick reveals the prevalence of attempted hangings among people held in Australian immigration detention centres, and suggests the ‘precipitating factors’ that lead to self-harm can be directly connected to government policy.</p>
+
 <h2 id="deportedbydiacintoperpetuallimbo"><a href="http://www.newmatilda.com/2013/08/14/deported-diac-perpetual-limbo">Deported by DIAC Into Perpetual Limbo</a></h2>
 
 <p>by Paul Farrell, Lawrence Bull and Luke Bacon</p>
